<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:id="@+id/toolbar"
            android:elevation="10dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_height="?actionBarSize">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:text="@string/profile"
                android:textSize="@dimen/text_size_primary"/>
        </androidx.appcompat.widget.Toolbar>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            app:shapeAppearanceOverlay="@style/roundedImageView10Percent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            android:layout_marginTop="@dimen/margin_primary"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/profileImageView"
            android:visibility="gone"
            app:layout_constraintRight_toRightOf="parent"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phoneLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/profileImageView"
            android:layout_margin="@dimen/margin_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/phoneEditText"
                android:layout_height="wrap_content"
                android:hint="@string/phone" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/postCodeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/phoneLayout"
            android:layout_below="@id/nameLayout"
            android:layout_margin="@dimen/margin_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/postCodeEditText"

                android:hint="@string/post_code" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressOneLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/postCodeLayout"
            android:layout_below="@id/nameLayout"
            android:layout_margin="@dimen/margin_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addressOneEditText"

                android:hint="@string/address_line_one" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/addressTwoLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/addressOneLayout"
            android:layout_below="@id/nameLayout"
            android:layout_margin="@dimen/margin_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/addressTwoEditText"

                android:hint="@string/address_line_two" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cityLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/addressTwoLayout"
            android:layout_margin="@dimen/margin_primary">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cityEditText"
            android:hint="@string/city" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:id="@+id/updateButton"
            android:text="@string/update"
            android:layout_margin="@dimen/margin_primary"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:elevation="2dp"
            android:visibility="visible"
            android:id="@+id/loaderConatiner"
            android:layout_height="match_parent">
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/loader"
                android:layout_gravity="center"/>
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>