<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:clickable="true"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:gravity="center"
            android:paddingRight="@dimen/padding_double"
            android:paddingLeft="@dimen/padding_double"
            android:textStyle="bold"
            android:text="@string/please_enter_the_information_to"
            android:id="@+id/title"/>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nameLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_below="@id/title"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/nameEditText"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nameLayout"
            android:layout_margin="@dimen/margin_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/emailEditText"

                android:hint="@string/email" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/emailLayout"
            android:layout_margin="@dimen/margin_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/passwordEditText"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_size"
            android:layout_below="@id/passwordLayout"
            android:layout_marginStart="@dimen/margin_primary"
            android:layout_marginTop="@dimen/margin_primary"
            android:layout_marginEnd="@dimen/margin_primary"
            android:layout_marginBottom="@dimen/margin_primary"
            android:background="@drawable/button_primary"
            android:enabled="false"
            android:id="@+id/continueButton"
            android:gravity="center"
            android:text="@string/continue_to_proceed"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_primary"
            android:textStyle="bold" />


        <FrameLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:id="@+id/loaderLayout"
            android:visibility="gone"
            android:layout_height="match_parent">
            <ProgressBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </FrameLayout>

    </RelativeLayout>



</layout>
