<?xml version="1.0" encoding="utf-8"?>
<layout>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.Toolbar
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_height="?actionBarSize">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_primary"
            android:id="@+id/title"
            android:text="@string/purchase"/>
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:textSize="@dimen/text_size_big"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_chainStyle="packed"
        android:gravity="center"
        android:id="@+id/successText"
        android:text="@string/purchase_successful"
        app:layout_constraintBottom_toTopOf="@id/check"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/check"
        app:srcCompat = "@drawable/ic_check"
        app:layout_constraintBottom_toTopOf="@id/backToHome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/margin_primary"
        app:layout_constraintTop_toBottomOf="@id/successText"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/backToHome"
        android:text="@string/back_to_home"
        android:padding="30dp"
        android:layout_marginBottom="30dp"
        android:textSize="@dimen/text_size_primary"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>
</layout>