<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/white"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:navigationIcon="@drawable/ic_back_black">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_details"
                android:textSize="@dimen/text_size_primary" />
        </androidx.appcompat.widget.Toolbar>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:scaleType="centerCrop"
            android:background="#22FF00FF"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <TextView
            android:id="@+id/productName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/product_name"
            android:textSize="@dimen/text_size_primary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

        <TextView
            android:id="@+id/productNameSetTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="right"
            android:textSize="@dimen/text_size_primary"
            app:layout_constraintLeft_toRightOf="@id/productName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image"
            tools:text="This is a  garbage" />

        <TextView
            android:id="@+id/priceView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/price"
            android:textSize="@dimen/text_size_primary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/productName" />

        <TextView
            android:id="@+id/priceSetTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="right"
            android:textSize="@dimen/text_size_primary"
            app:layout_constraintLeft_toRightOf="@id/productName"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/productNameSetTextView"
            tools:text="Tk 1200" />

        <TextView
            android:id="@+id/descriptionView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/description"
            android:textSize="@dimen/text_size_primary"
            app:layout_constraintLeft_toLeftOf="@id/priceView"
            app:layout_constraintTop_toBottomOf="@id/priceView" />

        <TextView
            android:id="@+id/descriptionTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:layout_constraintLeft_toLeftOf="@id/descriptionView"
            app:layout_constraintRight_toRightOf="@id/priceSetTextView"
            app:layout_constraintTop_toBottomOf="@id/descriptionView"
            tools:text="iasdasad asdaksdan asdasdkasdakd askdasdadjaskasjkd akdjad" />


        <Button
            android:id="@+id/purchaseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:text="@string/purchase"
            app:layout_constraintBottom_toBottomOf="parent" />

        <FrameLayout
            android:layout_width="match_parent"
            android:id="@+id/loaderConatiner"
            android:background="#FFFFFF"
            android:elevation="10dp"
            android:layout_height="match_parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_height="wrap_content"
                android:id="@+id/loader"/>
        </FrameLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>